--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 extend: {
                     colors: {
                         accent: {
-                            DEFAULT: '#06B6D4', // Modern Teal
+                            DEFAULT: '#06B6D4', 
                             hover: '#0891B2',
                         },
-                        secondary: '#059669', // Emerald Green
+                        secondary: '#059669',
                     },
                     fontFamily: {
                         sans: ['Plus Jakarta Sans', 'sans-serif'],
@@ -133,28 +133,31 @@
                     <h3 class="font-bold text-xl uppercase">Experience</h3>
                 </div>
                 
-                <div class="space-y-4 sm:space-y-6 relative">
+                <div class="space-y-6 relative">
                     <div class="absolute left-2 top-2 bottom-2 w-1 bg-black dark:bg-white opacity-20"></div>
 
-                    <div class="relative pl-6 sm:pl-8">
-                        <div class="absolute left-0 top-1.5 w-4 h-4 sm:w-5 sm:h-5 bg-black dark:bg-white rounded-full border-3 sm:border-4 border-cyan-50 dark:border-cyan-900"></div>
+                    <div class="relative pl-8">
+                        <div class="absolute left-0 top-1.5 w-5 h-5 bg-black dark:bg-white rounded-full border-4 border-yellow-100 dark:border-zinc-800"></div>
+                        <h4 class="font-bold text-lg leading-tight">LightHouse Group</h4>
                         <p class="text-sm font-bold text-secondary dark:text-purple-300">Business Process</p>
-                        <p class="text-xs text-gray-600 dark:text-gray-400 mt-1 leading-snug">Optimasi operasional & process improvement</p>
-                        <p class="text-xs font-mono opacity-70 mt-2">Present</p>
+                        <p class="text-xs font-mono text-gray-600 dark:text-gray-200 mt-1">Optimasi operasional & process improvement</p>
+                        <p class="text-xs font-mono opacity-70 mt-1">Present</p>
                     </div>
 
-                    <div class="relative pl-6 sm:pl-8">
-                        <div class="absolute left-0 top-1.5 w-4 h-4 sm:w-5 sm:h-5 bg-black dark:bg-white rounded-full border-3 sm:border-4 border-cyan-50 dark:border-cyan-900"></div>
+                    <div class="relative pl-8">
+                        <div class="absolute left-0 top-1.5 w-5 h-5 bg-black dark:bg-white rounded-full border-4 border-yellow-100 dark:border-zinc-800"></div>
+                        <h4 class="font-bold text-lg leading-tight">Megalogic</h4>
                         <p class="text-sm font-bold text-accent dark:text-blue-300">Full Stack Developer</p>
-                        <p class="text-xs text-gray-600 dark:text-gray-400 mt-1 leading-snug">Backend systems & scalable architecture</p>
-                        <p class="text-xs font-mono opacity-70 mt-2">Jan 2024 - Present</p>
+                        <p class="text-xs font-mono text-gray-600 dark:text-gray-200 mt-1">Backend systems & scalable architecture</p>
+                        <p class="text-xs font-mono opacity-70 mt-1">Jan 2024 - Present</p>
                     </div>
 
-                    <div class="relative pl-6 sm:pl-8">
-                        <div class="absolute left-0 top-1.5 w-4 h-4 sm:w-5 sm:h-5 bg-gray-500 rounded-full border-3 sm:border-4 border-cyan-50 dark:border-cyan-900"></div>
+                    <div class="relative pl-8">
+                        <div class="absolute left-0 top-1.5 w-5 h-5 bg-gray-500 rounded-full border-4 border-yellow-100 dark:border-zinc-800"></div>
+                        <h4 class="font-bold text-lg leading-tight">ADS Digital Partner</h4>
                         <p class="text-sm font-bold text-gray-600 dark:text-gray-400">Backend Engineer</p>
-                        <p class="text-xs text-gray-600 dark:text-gray-400 mt-1 leading-snug">API development & database optimization</p>
-                        <p class="text-xs font-mono opacity-70 mt-2">Sep 2024 - Dec 2024</p>
+                        <p class="text-xs font-mono text-gray-600 dark:text-gray-200 mt-1">API development & database optimization</p>
+                        <p class="text-xs font-mono opacity-70 mt-1">Sep 2024 - Dec 2024</p>
                     </div>
                 </div>
             </div>
@@ -191,7 +194,7 @@
                 </div>
             </div>
 
-            <div class="md:col-span-8 neo-card neo-shadow bg-white dark:bg-zinc-900 p-4 sm:p-6 rounded-xl">
+            <div class="md:col-span-8 neo-card neo-shadow bg-white dark:bg-zinc-900 p-6 rounded-xl">
                 <h3 class="font-bold text-sm uppercase mb-4 text-black dark:text-gray-100">Technical Arsenal</h3>
                 <div class="flex flex-wrap gap-2">
                     <template x-for="tech in ['TypeScript', 'Express.js', 'Elysia', 'Laravel', 'Go', 'MySQL', 'PostgreSQL', 'GCP', 'Prisma']">
@@ -250,19 +253,19 @@
             </div>
         </section>
 
-        <section id="contact" class="neo-card neo-shadow bg-accent text-white p-6 sm:p-10 md:p-16 text-center relative overflow-hidden">
+        <section id="contact" class="neo-card neo-shadow bg-accent text-white p-10 md:p-16 text-center relative overflow-hidden">
             <div class="relative z-10">
-                <h2 class="text-2xl sm:text-3xl md:text-5xl font-extrabold mb-4 sm:mb-6 uppercase leading-tight">
+                <h2 class="text-3xl md:text-5xl font-extrabold mb-6 uppercase leading-tight">
                     Need scalable systems? <br> Let's optimize together.
                 </h2>
-                <p class="text-base sm:text-lg md:text-xl font-medium max-w-2xl mx-auto mb-6 sm:mb-10 opacity-90">
+                <p class="text-lg md:text-xl font-medium max-w-2xl mx-auto mb-10 opacity-90">
                     Open for collaboration on Backend Architecture and Process Improvement.
                 </p>
-                <div class="flex flex-wrap justify-center gap-3 sm:gap-6">
-                    <a href="mailto:ramandhika.ilham@gmail.com" class="neo-card bg-white text-black px-6 sm:px-8 py-3 sm:py-4 font-bold text-sm sm:text-lg hover:bg-gray-100 transition neo-click shadow-[4px_4px_0px_0px_rgba(0,0,0,1)]">
+                <div class="flex flex-wrap justify-center gap-6">
+                    <a href="mailto:ramandhika.ilham@gmail.com" class="neo-card bg-white text-black px-8 py-4 font-bold text-lg hover:bg-gray-100 transition neo-click shadow-[4px_4px_0px_0px_rgba(0,0,0,1)]">
                         Email Me
                     </a>
-                    <a href="https://github.com/ramandhika" target="_blank" class="neo-card bg-black text-white px-6 sm:px-8 py-3 sm:py-4 font-bold text-sm sm:text-lg border-white hover:bg-zinc-900 transition neo-click shadow-[4px_4px_0px_0px_rgba(255,255,255,1)]">
+                    <a href="https://github.com/ramandhika" target="_blank" class="neo-card bg-black text-white px-8 py-4 font-bold text-lg border-white hover:bg-zinc-900 transition neo-click shadow-[4px_4px_0px_0px_rgba(255,255,255,1)]">
                         GitHub Profile
                     </a>
                 </div>
